--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "lint": "eslint src --ext .ts",
     "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
     "dev": "tsx watch src/server.ts",
     "prd": "node build/server.js",
     "build": "tsup --out-dir build"
@@ -18,11 +21,14 @@
     "@types/node": "20.8.2",
     "@typescript-eslint/eslint-plugin": "6.7.4",
     "@typescript-eslint/parser": "6.7.4",
+    "@vitest/coverage-v8": "0.34.6",
+    "@vitest/ui": "0.34.6",
     "eslint": "8.50.0",
     "prisma": "5.4.1",
     "tsup": "7.2.0",
     "tsx": "3.13.0",
     "typescript": "5.2.2",
+    "vite-tsconfig-paths": "4.2.1",
     "vitest": "0.34.6"
   },
   "dependencies": {
